# wiijoker

./: Makefile.in  README.md  compile  configure  configure.ac  depcomp  install-sh  missing
scratchpad/: .devkitpro-graphics-lesson1-example.c.swp
src/: Makefile  Makefile.am  Makefile.in  fb.cc  fb.h  fb_read.h  main.cc  obs.cc  obs.h  obs2.cc  obs2.h  obs_screen.cc  obs_screen.h  reg.cc  reg.h  types_int.h  vireg.cc  vireg.h  x.h
